Use exhaustive pattern matching based on type